
Fixed the report assessments to use profiles even with rcrid and to
pass curriculum year correctly.

Added an "absent" button to transport editor for cancelling single
rides.

Separate transport lists for AM, PM and just amendments.

Made fetchSubjectReports use crid strictly with regard to identifying assessments.

Added the possibility of residence staff to write summary report comments.


Version ClaSS-0.9.29 release (2010/10/30)
-----------------------------------------

Simplified admissions' tables and removed the static values option.

Addded a reporting script for printing admissions reports.

Until they work, removed categories from comment writer.

Extra css to colour traffic light categories in MarkBook.

Apply the patch! Fix to grandparents in guardian relationship.

Added a private field to guardian table.

Attendance reports are linked to from the student profile page.

Use html_entity_decode to avoid problems when preparing comments for xml.

Added targets reports (same as attendance) through the print report script.



Version ClaSS-0.9.28 release (2010/10/13)
-----------------------------------------

Transitioning from XML_Unserializer to PHP5 functions for
simplexml. Affects xmlreader function at the moment.

Assessment columns from previous years can now carry over to courses
even when the curriculum structure is not identical.

Display emaillink function to handle clicktoemail and improved with
mailto if WebMail not configured.

Age and Course added to fetchstudent singlefield function.

Fixes and improvements to printing the transport list.

Added second nationality / dual citezenship figure to statistics page.

Fixed filter by gender for report assessments when using cohorts.


Version ClaSS-0.9.27 release (2010/10/4)
-----------------------------------------

Working on change to new comment writer.

Added fields to community table (apply the patch!) for extra curricular activities.
